# XRFSplitter

./: .gitignore  .pylintrc  LICENSE.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  pyinstaller.yml
LICENSES/: all.md
app/: main.py  ui.py  utils.py
src/: main.py  ui.py  utils.py
test/: test.ipynb
test/fixtures/: 01968-GeoMining.pdz  results.csv
workflows/: pyinstaller.yml
xrfsplitter/sandbox/: Results.csv  test.ipynb
xrfsplitter/src/: settings.py  ui.py  utils.py
